Fix spacing between navbars and pages
Standardize navbar height to leave space for it via the page size.
Create variable '$navbar-height' to make this dependency explicit.

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -45,3 +45,6 @@ $font-family-base: Montserrat, "IBM Plex Sans Condensed";
   font-weight: normal;
   src: url("/Montserrat-Regular.otf");
 }
+
+/* Navbar */
+$navbar-height: 5rem;
